Improve: 文字列リソースを改善

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -3,15 +3,14 @@
     <string name="progress_loading_text">読み込み中…</string>
     <string name="require_permit_usage_access">使用状況へのアクセスの許可が必要です。</string>
     <string name="search">検索</string>
-    <string name="un_mute">ミュート解除</string>
+    <string name="unmute">ミュート解除</string>
     <string name="usage_access_allowed">使用状況へのアクセスを許可されています。</string>
     <string name="usage_access_not_allowed">使用状況へのアクセスを許可されていません。</string>
-    <string name="auto_master_mute_service_description">あなたが選択したアプリの前面化をトリガーに、自動でマスターミュートを実行するバックグラウンドサービスを開始できます。他のアプリの前面化を監視するため、このアプリは使用状況へのアクセス許可が必要です。許可がない状態で開始ボタンを押すと、「使用状況へのアクセス」の設定画面が起動します。</string>
     <string name="mute">ミュート</string>
     <string name="select_app">アプリ選択</string>
     <string name="settings">設定</string>
     <string name="notification">通知</string>
-    <string name="start_auto_mute_service">自動ミュートサービスの開始</string>
+    <string name="start_auto_mute_service">自動ミュートの開始</string>
     <string name="auto_mute_category_title">自動ミュート</string>
     <string name="start_auto_mute_service_summary">選択したアプリの起動時にミュートします。</string>
     <string name="manual_mute_title">手動ミュート</string>
@@ -21,12 +20,13 @@
     <string name="start_after_update">アップデート後に開始</string>
     <string name="start_after_reboot_summary">端末の再起動後に開始します。</string>
     <string name="start_after_update_summary">このアプリのアップデート後に開始します。</string>
-    <string name="auto_mute_service_running">自動ミュートサービスを実行中</string>
-    <string name="short_duration_toast_title">トースト時間を短くする</string>
-    <string name="toast_mute_change_title">ミュートの変更をトーストで通知</string>
-    <string name="short_duration_toast_summary">トースト通知の期間を短くします。</string>
-    <string name="toast_mute_change_summary">ミュートのON/OFFをトースト通知します。</string>
-    <string name="open_notification_settings_title">通知設定を開く</string>
-    <string name="open_notification_settings_summary">設定変更後は必要に応じてサービスを再起動してください。</string>
-    <string name="toast_gravity_title">トースト表示位置</string>
+    <string name="auto_mute_service_running">「自動ミュート」を実行中</string>
+    <string name="short_duration_toast_title">通知の表示時間を短縮する</string>
+    <string name="toast_mute_change_title">ミュートの変更を通知</string>
+    <string name="toast_mute_change_summary">ミュートのON/OFFを通知します。</string>
+    <string name="open_notification_settings_title">設定を開く</string>
+    <string name="open_notification_settings_summary">このアプリの通知設定を開きます。</string>
+    <string name="toast_gravity_title">通知の表示位置</string>
+    <string name="unmute_on_incoming_call">着信時にミュートを解除</string>
+    <string name="unmute_on_incoming_call_summary">電話の着信時にミュートを解除します。</string>
 </resources>
