--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,32 @@
 <resources>
     <string name="mute">Mute</string>
-    <string name="un_mute">Un Mute</string>
+    <string name="unmute">Unmute</string>
     <string name="usage_access_allowed">Usage access is allowed.</string>
     <string name="usage_access_not_allowed">Usage access is not allowed.</string>
     <string name="require_permit_usage_access">Require permit usage access.</string>
     <string name="progress_loading_text">loading…</string>
     <string name="search">Search</string>
     <string name="app_name" translatable="false">Automute</string>
-    <string name="auto_master_mute_service_description">You can start a background service that automatically performs master mute, triggered by the foreground of the app you selected. This app requires permission to access usage state to monitor the foreground of other apps. If you press the start button when I do not have permission, the “Usage access” setting screen will start.</string>
     <string name="select_app">Select App</string>
     <string name="settings">Settings</string>
     <string name="notification">Notification</string>
     <string name="manual_mute_category_title">Manual Mute</string>
     <string name="auto_mute_category_title">Auto Mute</string>
     <string name="manual_mute_title">Manual mute</string>
-    <string name="start_auto_mute_service">Start auto mute service</string>
+    <string name="start_auto_mute_service">Start auto mute</string>
     <string name="start_after_reboot">Start after reboot</string>
     <string name="start_after_update">Start after update</string>
     <string name="start_after_update_summary">Start after updating this app.</string>
     <string name="start_after_reboot_summary">Start after device reboot.</string>
     <string name="start_auto_mute_service_summary">Mute when launching the selected app.</string>
     <string name="manual_mute_summary">Switches mute.</string>
-    <string name="auto_mute_service_running">Auto Mute service is running</string>
-    <string name="toast_mute_change_title">Notify mute change by toast</string>
-    <string name="short_duration_toast_title">Shorten toast duration</string>
-    <string name="toast_mute_change_summary">Toast notification of mute ON / OFF.</string>
-    <string name="short_duration_toast_summary">Shorten toast notification duration.</string>
-    <string name="open_notification_settings_title">Open notification settings</string>
-    <string name="open_notification_settings_summary">After changing the settings, restart the service as necessary.</string>
-    <string name="toast_gravity_title">Toast display position</string>
+    <string name="auto_mute_service_running">\"Auto mute\" is running</string>
+    <string name="toast_mute_change_title">Notify mute change</string>
+    <string name="short_duration_toast_title">Shorten notification duration</string>
+    <string name="toast_mute_change_summary">Notification of mute ON / OFF.</string>
+    <string name="open_notification_settings_title">Open settings</string>
+    <string name="open_notification_settings_summary">Open the notification settings for this app.</string>
+    <string name="toast_gravity_title">Notification display position</string>
+    <string name="unmute_on_incoming_call">Unmute on incoming call</string>
+    <string name="unmute_on_incoming_call_summary">Unmute on incoming call.</string>
 </resources>
