--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="toast_gravity_title">Notification display position</string>
     <string name="unmute_on_incoming_call">Unmute on incoming call</string>
     <string name="unmute_on_incoming_call_summary">Unmute on incoming call.</string>
+    <string name="select_activity">Select Activity</string>
 </resources>
