--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="unmute_on_incoming_call_summary">Unmute on incoming call.</string>
     <string name="select_activity">Select Activity</string>
     <string name="dialog_message_require_permission_to_usage_stats">Grant this app permission to access app usage status to use auto mute function.</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
